[tool.poetry]
name = "command_lib"
version = "0.1.0"
description = "command line utility to run named sql commands"
authors = ["RahulP <rahul8.paul@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.11"
SQLAlchemy = "1.4.41"
pandas = "1.3.5"
mysql-connector-python = "^8.0.31"
numpy = "1.21.6"
PyYAML = "5.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
